[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qtml"
version = "0.1.0"
description = "Quantitative Machine Learning — tabular prediction for cross-sectional, panel, and time series data"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scikit-learn",
    "torch",
    "lightgbm",
    "polars",
    "pyrstat @ git+https://github.com/vxtnv/pyrstat.git",
    "lassonet",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qtml*"]
